[package]
name = "cli-alarm"
version = "0.1.0"
edition = "2021"
description = "A simple CLI alarm clock (should help programmers stand up and stretch more)"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rodio = "0.18"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = "0.4"

[[bin]]
name = "alarm"
path = "src/main.rs"
